buildpacks/nodejs/src/yarn/snapshots/errors___yarn_install_prune_plugin_error.snap
---
source: buildpacks/nodejs-yarn/src/errors.rs
---
- Debug Info:
  - Out of disk space

! Failed to install Yarn plugin for pruning
!
! The Heroku Node.js Yarn buildpack uses a custom plugin for Yarn to handle pruning of dev dependencies. An unexpected error was encountered while trying to install it.
!
! The causes for this error are unknown. We do not have suggestions for diagnosis or a workaround at this time. You can help our understanding by sharing your buildpack log and a description of the issue at:
! https://github.com/heroku/buildpacks-nodejs/issues
!
! If you're able to reproduce the problem with an example application and the `pack` build tool (https://buildpacks.io/docs/for-platform-operators/how-to/integrate-ci/pack/), adding that information to the discussion will also help. Once we have more information around the causes of this error we may update this message.
